[project]
name = "playbacque"
version = "0.2.2"
description = "Loop play audio"
authors = [
	{ name = "George Zhang", email = "geetransit@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Multimedia :: Sound/Audio :: Players",
]
requires-python = ">=3.7,<4.0"
dependencies = [
	"sounddevice>=0.4.0,<0.5.0",
	"ffmpeg-python>=0.2.0,<0.3.0",
	"typing-extensions>=4.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://pypi.org/project/playbacque/"
Repository = "https://github.com/GeeTransit/playbacque"

[project.scripts]
playbacque = "playbacque:main"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
