[project]
name = "playbacque"
description = "Loop play audio"
authors = [
	{ name = "George Zhang", email = "geetransit@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Multimedia :: Sound/Audio :: Players",
]
requires-python = ">=3.7,<4.0"
dependencies = [
	"sounddevice>=0.4.0,<0.5.0",
	"ffmpeg-python>=0.2.0,<0.3.0",
	"typing-extensions>=4.0.0,<5.0.0;python_version<'3.10'",
	"importlib-metadata>=4.0.0,<5.0.0;python_version<'3.8'",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/playbacque/"
Repository = "https://github.com/GeeTransit/playbacque"

[project.scripts]
playbacque = "playbacque:main"

[tool.hatch]
version = { source = "vcs" }

[tool.hatch.build]
ignore-vcs = true
include = ["playbacque.py"]

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
